fixed some general layout issues

--- a/gif-search-app/src/App.scss
+++ b/gif-search-app/src/App.scss
@@ -6,6 +6,7 @@
   height: auto;
   background-color: black;
   background-image: url('./background-images/background-gif-app.png');
+  background-repeat: repeat-y;
 
 }
 
