--- a/gif-search-app/src/Components/Saved/saved.scss
+++ b/gif-search-app/src/Components/Saved/saved.scss
@@ -4,6 +4,7 @@
   margin-top: 0;
   top: 0;
   background-image: url('../../background-images/background-gif-app.png');
+  background-size: cover;
 
   &::-webkit-scrollbar {
     width:6px;
