--- a/gif-search-app/src/Components/login-signup/login-signup.scss
+++ b/gif-search-app/src/Components/login-signup/login-signup.scss
@@ -1,5 +1,7 @@
 .sign-in-and-up-container {
   height: 100vh;
   background-image: url('../../background-images/background-gif-app.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 
 }
