--- a/gif-search-app/src/index.scss
+++ b/gif-search-app/src/index.scss
@@ -6,6 +6,8 @@
   height: 100vh;
   background-color: black;
   background-image: url('./background-images/background-gif-app.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 body {
